Projects section layout

--- a/index.html
+++ b/index.html
@@ -54,14 +54,10 @@
             </div>
             <div class="projectsContainer">
                 <div class="projectCardsCol">
-                    <img class="cardImg" src="./images/watercolor-rose-bush.JPG"/>
-                    <img class="cardImg" src="./images/in-the-desert.JPG"/>
-                    <img class="cardImg" src="./images/banana-caution.JPG"/>
+                    <div class="project-card-img"></div>
                 </div>
                 <div class="projectCardsCol">
-                    <img class="cardImg" src="./images/purple-land-sunset.JPG"/>
-                    <img class="cardImg" src="./images/blue-anxiety-guys.JPG"/>
-                    <img class="cardImg" src="./images/angsty-roses.JPG"/>
+                    <div class="project-card-img"></div>
                 </div>
             </div>
         </div>
