--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
                         <path class="email" d="M15 6.954 8.978 9.86a2.25 2.25 0 0 1-1.956 0L1 6.954V11.5A1.5 1.5 0 0 0 2.5 13h11a1.5 1.5 0 0 0 1.5-1.5V6.954Z" />
                     </svg>
                 </a>
+                <a href="https://github.com/Xinxinidea" target="_blank">
+                    <!-- <svg id="github" class="resize" xmlns="http://www.w3.org/2000/svg" width="2vw" viewBox="0 0 16 16" fill="#2E2D2D" class="size-4">
+                        <path class="email" d="M2.5 3A1.5 1.5 0 0 0 1 4.5v.793c.026.009.051.02.076.032L7.674 8.51c.206.1.446.1.652 0l6.598-3.185A.755.755 0 0 1 15 5.293V4.5A1.5 1.5 0 0 0 13.5 3h-11Z" />
+                        <path class="email" d="M15 6.954 8.978 9.86a2.25 2.25 0 0 1-1.956 0L1 6.954V11.5A1.5 1.5 0 0 0 2.5 13h11a1.5 1.5 0 0 0 1.5-1.5V6.954Z" />
+                    </svg> -->
+                    <svg id="github" class="resize" xmlns="https://github.com/Xinxinidea" width="1.75vw" fill="#2E2D2D" class="bi bi-github" viewBox="0 0 16 16">
+                        <path class="" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
+                    </svg>
+                </a>
             </div>
         </nav>
 
@@ -48,7 +57,7 @@
             <p id="homeDescription">CS Undergrad at Georgia Tech</p>
         </div>
 
-        <div id="projects">
+        <!-- <div id="projects">
             <div class="section-title-container-light">
                 <img class="border" id="border-light-left" src="./images/borders-light-left.png"/>
                 <p class="sectionTitle">Projects</p>
@@ -67,7 +76,7 @@
                     <div class="project-card-img"></div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <div id="art">
             <div class="section-title-container-light">
